[package]
name = "pgs-subtitles"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.16.0"
serde = { version = "1.0.164", features = ["derive"], optional = true }
thiserror = "1.0.40"

[features]
serde = ["dep:serde"]
