[package]
name = "pgsdump"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive", "wrap_help"] }
pgs-subtitles = { path = "../pgs-subtitles" }
wild = "2.1.0"
